--- a/index.html
+++ b/index.html
@@ -4,9 +4,45 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>icons</title>
 </head>
 <body>
+
+  <header>
+    <div class="header-top">
+      <h1>FontIcons</h1>
+    </div>
+    <div class="header-bottom">
+      <span>filtra per tipo</span>
+      <select name="opzioni" id="">
+        <option value="All">All</option>
+        <option value="Animals">Animals</option>
+        <option value="Vegetable">Vegetable</option>
+        <option value="User">User</option>
+      </select>
+    </div>
+  </header>
+
+  <main>
+    <ul class="flex ul">
+      <li class="card flex">
+          <i class="fas fa-cat animals"></i><span>cat</span>
+      </li>
+      <li class="card flex">
+        <i class="fas fa-cat animals"></i><span>cat</span>
+      </li>
+      <li class="card flex">
+        <i class="fas fa-cat animals"></i><span>cat</span>
+      </li>
+      <li class="card flex">
+        <i class="fas fa-cat animals"></i><span>cat</span>
+      </li>
+    </ul>
+  </main>
   
   <script src="js/data.js"></script>
 </body>
