--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     </div>
   </header>
 
-  <main>
-    <ul class="flex ul">
+  <main class="cards-container flex">
+    <!-- <ul class="flex ul">
       <li class="card flex">
           <i class="fas fa-cat animals"></i><span>cat</span>
       </li>
@@ -41,7 +41,7 @@
       <li class="card flex">
         <i class="fas fa-cat animals"></i><span>cat</span>
       </li>
-    </ul>
+    </ul> -->
   </main>
   
   <script src="js/data.js"></script>
