--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     </div>
     <div class="header-bottom">
       <span>filtra per tipo</span>
-      <select name="opzioni" id="">
-        <option value="All">All</option>
-        <option value="Animals">Animals</option>
-        <option value="Vegetable">Vegetable</option>
-        <option value="User">User</option>
+      <select name="opzioni" id="opzioni">
+        <option value="all">All</option>
+        <option value="animal">Animal</option>
+        <option value="vegetable">Vegetable</option>
+        <option value="user">User</option>
       </select>
     </div>
   </header>
